force-app/main/default/objects/OpportunitySplitMapping__c/OpportunitySplitMapping__c.object-meta.xml
<CustomObject>
    <description>Opportunity Split Mapping</description>
    <label>OpportunitySplitMapping</label>
    <nameField>
        <displayFormat>OSM-{0000}</displayFormat>
        <label>OpportunitySplitMapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpportunitySplitMappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>