force-app/main/default/objects/OpportunitySplitMapping__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>Default value</description>
    <inlineHelpText>Default value</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>