force-app/main/default/objects/OpportunitySplitMapping__c/fields/Default_Value_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_Field_Type__c</fullName>
    <description>Default Value Field Type</description>
    <inlineHelpText>Default Value Field Type</inlineHelpText>
    <label>Default Value Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>