force-app/main/default/objects/OpportunitySplitMapping__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Field to be Copied</description>
    <inlineHelpText>Field to be Copied</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>