force-app/main/default/objects/OpportunitySplitMapping__c/fields/From_Field__c.field-meta.xml
<CustomField>
    <fullName>From_Field__c</fullName>
    <description>From Field</description>
    <inlineHelpText>From Field</inlineHelpText>
    <label>From Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>