force-app/main/default/objects/OpportunitySplitMapping__c/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <description>Prefix to existing field value</description>
    <inlineHelpText>Prefix to existing field value</inlineHelpText>
    <label>Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>