force-app/main/default/objects/OpportunitySplitMapping__c/fields/Skip_Update_if_child_has_value__c.field-meta.xml
<CustomField>
    <fullName>Skip_Update_if_child_has_value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Update if child has value</label>
    <type>Checkbox</type>
</CustomField>