force-app/main/default/objects/OpportunitySplitMapping__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <description>Suffix to existing field value</description>
    <inlineHelpText>Suffix to existing field value</inlineHelpText>
    <label>Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>