force-app/main/default/objects/OpportunitySplitMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field__c</columns>
    <columns>From_Field__c</columns>
    <columns>Prefix__c</columns>
    <columns>Suffix__c</columns>
    <columns>Default_Value__c</columns>
    <columns>Default_Value_Field_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>